--- a/faq.html
+++ b/faq.html
@@ -1,16 +1,112 @@
-<!doctype html><html lang="en"><head>
-<meta charset="utf-8"><meta name="viewport" content="width=device-width,initial-scale=1">
-<title>FAQ | LiquidRai</title>
-<meta name="description" content="Common questions about LiquidRai and token participation.">
-<link rel="canonical" href="https://kalinwolf.github.io/faq.html">
-<meta property="og:title" content="FAQ">
-<meta property="og:description" content="Common questions about LiquidRai and token participation.">
-<meta property="og:type" content="article">
-<meta property="og:url" content="https://kalinwolf.github.io/faq.html">
-<link rel="stylesheet" href="assets/css/styles.css">
-</head><body>
-<nav class="container"><div><strong>LiquidRai</strong></div><div><a href="/">Home</a><a href="project.html">Project</a><a href="realestate.html">Real Estate</a><a href="goats.html">Goat Farm</a><a href="token.html">Token</a><a href="timeline.html">Timeline</a><a href="faq.html">FAQ</a><a href="contact.html">Contact</a></div></nav>
-<section class="section container"><h1>FAQ</h1><p style="color:var(--muted)">Common questions about LiquidRai and token participation.</p></section>
-<footer><div class="container"><div>© <span id="y"></span> LiquidRai</div><div style="margin-top:10px"><a href="project.html">Project</a><a href="realestate.html">Real Estate</a><a href="goats.html">Goat Farm</a><a href="token.html">Token</a><a href="timeline.html">Timeline</a><a href="faq.html">FAQ</a><a href="contact.html">Contact</a><a href="privacy.html">Privacy</a></div></div><script>document.getElementById("y").textContent=new Date().getFullYear()</script></footer>
-<script src="assets/js/main.js"></script>
-</body></html>
+<!doctype html>
+<html lang="en">
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>FAQ — LiquidRai</title>
+  <meta name="description" content="Frequently asked questions about the LiquidRai Chiang Rai real estate + goat farm project and token mechanics." />
+  <meta name="robots" content="index,follow" />
+  <link rel="icon" href="/assets/img/favicon.svg" type="image/svg+xml">
+  <link rel="canonical" href="https://kalinwolf.github.io/faq.html" />
+  <link rel="stylesheet" href="/assets/css/styles.css" />
+</head>
+<body>
+  <div class="nav">
+    <div class="container nav-inner">
+      <a class="brand" href="/index.html">
+        <div class="brand-badge"></div>
+        <div>
+          <div class="brand-title">LiquidRai</div>
+          <div class="brand-sub">FAQ • Clarity • Due diligence</div>
+        </div>
+      </a>
+      <div class="nav-links">
+        <a href="/project.html">Project</a>
+        <a href="/token.html">Token</a>
+        <a href="/timeline.html">Timeline</a>
+        <a href="/faq.html">FAQ</a>
+        <a href="/contact.html">Contact</a>
+      </div>
+      <div class="nav-cta">
+        <a class="btn btn-ghost" href="/project.html">Project</a>
+        <a class="btn btn-primary" href="/contact.html">Request pack</a>
+      </div>
+    </div>
+  </div>
+
+  <header class="hero">
+    <div class="container">
+      <div class="kicker">FAQ</div>
+      <h1 class="h1">Questions people ask before they take something seriously.</h1>
+      <p class="lead">If you don’t see your question here, use <a href="/contact.html">Contact</a> and we’ll add it.</p>
+    </div>
+  </header>
+
+  <main class="section">
+    <div class="container">
+      <div class="grid">
+        <div class="col-7 card" style="padding:18px">
+          <h2>Core</h2>
+          <blockquote><strong>What is LiquidRai?</strong><br/>A real asset project in Chiang Rai combining land/build-out + goat operations, with an optional tokenized participation layer for reporting/distribution integrity.</blockquote>
+          <div style="height:12px"></div>
+          <blockquote><strong>What’s the main objective?</strong><br/>Predictable cash-flow and repeatable execution. Not hype, not “community vibes” — proof and operations.</blockquote>
+          <div style="height:12px"></div>
+          <blockquote><strong>How do I evaluate it?</strong><br/>Start with <a href="/project.html">Project</a> + <a href="/timeline.html">Timeline</a>. Then request the pack for numbers, assumptions, and disclosures.</blockquote>
+
+          <div class="hr"></div>
+
+          <h2>Token</h2>
+          <blockquote><strong>Are tokens required?</strong><br/>No. The operation stands on its own. The token layer is optional and must be compliant.</blockquote>
+          <div style="height:12px"></div>
+          <blockquote><strong>Do tokens create yield?</strong><br/>No. Operations create yield. Tokens only track participation and help enforce reporting/distribution rules.</blockquote>
+
+          <div class="hr"></div>
+
+          <h2>Operations</h2>
+          <blockquote><strong>What are the main risks?</strong><br/>Execution delays, input cost volatility, animal health events, regulatory changes, and market pricing shifts. We mitigate via gates + KPI tracking + staged spend.</blockquote>
+
+          <div class="hero-actions" style="margin-top:14px">
+            <a class="btn btn-primary" href="/contact.html">Request investor pack</a>
+            <a class="btn btn-ghost" href="/privacy.html">Privacy</a>
+          </div>
+        </div>
+
+        <div class="col-5">
+          <div class="card" style="padding:18px">
+            <h2>Quick links</h2>
+            <div class="pill-row">
+              <a class="pill" href="/project.html">Project</a>
+              <a class="pill" href="/token.html">Token</a>
+              <a class="pill" href="/timeline.html">Timeline</a>
+              <a class="pill" href="/contact.html">Contact</a>
+            </div>
+          </div>
+
+          <div class="card" style="padding:18px;margin-top:16px">
+            <h2>Want your question added?</h2>
+            <p>Send it via the contact page. We’ll answer it and keep this page tight and useful.</p>
+            <a class="btn btn-primary" href="/contact.html">Ask a question</a>
+          </div>
+        </div>
+      </div>
+    </div>
+  </main>
+
+  <footer class="footer">
+    <div class="container footer-grid">
+      <div class="small"><strong>LiquidRai</strong><br/>FAQ is curated to be short, direct, and verification-friendly.</div>
+      <div class="small">
+        <div><a href="/index.html">Home</a></div>
+        <div><a href="/project.html">Project</a></div>
+        <div><a href="/timeline.html">Timeline</a></div>
+      </div>
+      <div class="small">
+        <div><a href="/contact.html">Contact</a></div>
+        <div><a href="/privacy.html">Privacy</a></div>
+      </div>
+    </div>
+  </footer>
+
+  <script src="/assets/js/main.js"></script>
+</body>
+</html>
