--- a/privacy.html
+++ b/privacy.html
@@ -1,16 +1,87 @@
-<!doctype html><html lang="en"><head>
-<meta charset="utf-8"><meta name="viewport" content="width=device-width,initial-scale=1">
-<title>Privacy Policy | LiquidRai</title>
-<meta name="description" content="Information on how LiquidRai handles communications and data.">
-<link rel="canonical" href="https://kalinwolf.github.io/privacy.html">
-<meta property="og:title" content="Privacy Policy">
-<meta property="og:description" content="Information on how LiquidRai handles communications and data.">
-<meta property="og:type" content="article">
-<meta property="og:url" content="https://kalinwolf.github.io/privacy.html">
-<link rel="stylesheet" href="assets/css/styles.css">
-</head><body>
-<nav class="container"><div><strong>LiquidRai</strong></div><div><a href="/">Home</a><a href="project.html">Project</a><a href="realestate.html">Real Estate</a><a href="goats.html">Goat Farm</a><a href="token.html">Token</a><a href="timeline.html">Timeline</a><a href="faq.html">FAQ</a><a href="contact.html">Contact</a></div></nav>
-<section class="section container"><h1>Privacy Policy</h1><p style="color:var(--muted)">Information on how LiquidRai handles communications and data.</p></section>
-<footer><div class="container"><div>© <span id="y"></span> LiquidRai</div><div style="margin-top:10px"><a href="project.html">Project</a><a href="realestate.html">Real Estate</a><a href="goats.html">Goat Farm</a><a href="token.html">Token</a><a href="timeline.html">Timeline</a><a href="faq.html">FAQ</a><a href="contact.html">Contact</a><a href="privacy.html">Privacy</a></div></div><script>document.getElementById("y").textContent=new Date().getFullYear()</script></footer>
-<script src="assets/js/main.js"></script>
-</body></html>
+<!doctype html>
+<html lang="en">
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Privacy — LiquidRai</title>
+  <meta name="description" content="Privacy policy for LiquidRai informational website." />
+  <meta name="robots" content="index,follow" />
+  <link rel="icon" href="/assets/img/favicon.svg" type="image/svg+xml">
+  <link rel="canonical" href="https://kalinwolf.github.io/privacy.html" />
+  <link rel="stylesheet" href="/assets/css/styles.css" />
+</head>
+<body>
+  <div class="nav">
+    <div class="container nav-inner">
+      <a class="brand" href="/index.html">
+        <div class="brand-badge"></div>
+        <div>
+          <div class="brand-title">LiquidRai</div>
+          <div class="brand-sub">Privacy • Minimal collection</div>
+        </div>
+      </a>
+      <div class="nav-links">
+        <a href="/project.html">Project</a>
+        <a href="/token.html">Token</a>
+        <a href="/timeline.html">Timeline</a>
+        <a href="/faq.html">FAQ</a>
+        <a href="/contact.html">Contact</a>
+      </div>
+      <div class="nav-cta">
+        <a class="btn btn-ghost" href="/contact.html">Contact</a>
+        <a class="btn btn-primary" href="/index.html">Home</a>
+      </div>
+    </div>
+  </div>
+
+  <header class="hero">
+    <div class="container">
+      <div class="kicker">Privacy</div>
+      <h1 class="h1">Minimal by default.</h1>
+      <p class="lead">This site is static and does not run analytics by default.</p>
+    </div>
+  </header>
+
+  <main class="section">
+    <div class="container">
+      <div class="card" style="padding:18px">
+        <h2>What we collect</h2>
+        <p><strong>Website:</strong> Nothing beyond standard server logs managed by GitHub Pages (e.g., for security and delivery).</p>
+        <p><strong>Contact:</strong> If you email us, we receive what you send. We do not sell your information.</p>
+
+        <div class="hr"></div>
+
+        <h2>Cookies</h2>
+        <p>This site does not set cookies intentionally. GitHub’s infrastructure may use necessary cookies for service delivery.</p>
+
+        <div class="hr"></div>
+
+        <h2>Changes</h2>
+        <p>If we add analytics or tracking, this page will be updated first.</p>
+
+        <div class="hero-actions" style="margin-top:14px">
+          <a class="btn btn-primary" href="/contact.html">Contact</a>
+          <a class="btn btn-ghost" href="/index.html">Home</a>
+        </div>
+      </div>
+    </div>
+  </main>
+
+  <footer class="footer">
+    <div class="container footer-grid">
+      <div class="small"><strong>LiquidRai</strong><br/>Privacy is treated as a constraint, not a feature.</div>
+      <div class="small">
+        <div><a href="/index.html">Home</a></div>
+        <div><a href="/project.html">Project</a></div>
+        <div><a href="/faq.html">FAQ</a></div>
+      </div>
+      <div class="small">
+        <div><a href="/contact.html">Contact</a></div>
+        <div><a href="/token.html">Token</a></div>
+      </div>
+    </div>
+  </footer>
+
+  <script src="/assets/js/main.js"></script>
+</body>
+</html>
