--- a/project.html
+++ b/project.html
@@ -1,16 +1,193 @@
-<!doctype html><html lang="en"><head>
-<meta charset="utf-8"><meta name="viewport" content="width=device-width,initial-scale=1">
-<title>Project Overview | LiquidRai</title>
-<meta name="description" content="Overview of LiquidRai’s integrated land and farm ecosystem.">
-<link rel="canonical" href="https://kalinwolf.github.io/project.html">
-<meta property="og:title" content="Project Overview">
-<meta property="og:description" content="Overview of LiquidRai’s integrated land and farm ecosystem.">
-<meta property="og:type" content="article">
-<meta property="og:url" content="https://kalinwolf.github.io/project.html">
-<link rel="stylesheet" href="assets/css/styles.css">
-</head><body>
-<nav class="container"><div><strong>LiquidRai</strong></div><div><a href="/">Home</a><a href="project.html">Project</a><a href="realestate.html">Real Estate</a><a href="goats.html">Goat Farm</a><a href="token.html">Token</a><a href="timeline.html">Timeline</a><a href="faq.html">FAQ</a><a href="contact.html">Contact</a></div></nav>
-<section class="section container"><h1>Project Overview</h1><p style="color:var(--muted)">Overview of LiquidRai’s integrated land and farm ecosystem.</p></section>
-<footer><div class="container"><div>© <span id="y"></span> LiquidRai</div><div style="margin-top:10px"><a href="project.html">Project</a><a href="realestate.html">Real Estate</a><a href="goats.html">Goat Farm</a><a href="token.html">Token</a><a href="timeline.html">Timeline</a><a href="faq.html">FAQ</a><a href="contact.html">Contact</a><a href="privacy.html">Privacy</a></div></div><script>document.getElementById("y").textContent=new Date().getFullYear()</script></footer>
-<script src="assets/js/main.js"></script>
-</body></html>
+<!doctype html>
+<html lang="en">
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Project — LiquidRai Chiang Rai Build + Operations</title>
+  <meta name="description" content="Detailed project scope: Chiang Rai land + staged build, goat dairy/meat operations, KPIs, risk controls, and reporting cadence." />
+  <meta name="robots" content="index,follow" />
+  <link rel="icon" href="/assets/img/favicon.svg" type="image/svg+xml">
+  <link rel="canonical" href="https://kalinwolf.github.io/project.html" />
+  <meta property="og:title" content="LiquidRai Project — Scope & Ops" />
+  <meta property="og:description" content="How the project is actually built: milestones, spend gates, operations ramp, and proof artifacts." />
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://kalinwolf.github.io/project.html" />
+  <meta property="og:image" content="https://kalinwolf.github.io/assets/img/hero-illustration.svg" />
+  <meta name="twitter:card" content="summary_large_image" />
+  <link rel="stylesheet" href="/assets/css/styles.css" />
+  <script type="application/ld+json">
+  {
+    "@context":"https://schema.org",
+    "@type":"WebPage",
+    "name":"LiquidRai Project",
+    "url":"https://kalinwolf.github.io/project.html",
+    "description":"Project scope and operations plan for the Chiang Rai real estate + goat farm project."
+  }
+  </script>
+</head>
+<body>
+  <div class="nav">
+    <div class="container nav-inner">
+      <a class="brand" href="/index.html">
+        <div class="brand-badge"></div>
+        <div>
+          <div class="brand-title">LiquidRai</div>
+          <div class="brand-sub">Project scope • KPIs • Risk controls</div>
+        </div>
+      </a>
+      <div class="nav-links">
+        <a href="/project.html">Project</a>
+        <a href="/token.html">Token</a>
+        <a href="/timeline.html">Timeline</a>
+        <a href="/faq.html">FAQ</a>
+        <a href="/contact.html">Contact</a>
+      </div>
+      <div class="nav-cta">
+        <a class="btn btn-ghost" href="/token.html">Token mechanics</a>
+        <a class="btn btn-primary" href="/contact.html">Request pack</a>
+      </div>
+    </div>
+  </div>
+
+  <header class="hero">
+    <div class="container">
+      <div class="kicker">Project</div>
+      <h1 class="h1">What we’re building — and how it gets validated.</h1>
+      <p class="lead">The goal is a real, boring outcome: stable cash-flow and measurable execution. Here’s the full structure.</p>
+    </div>
+  </header>
+
+  <main class="section">
+    <div class="container">
+      <div class="grid">
+        <div class="col-7">
+          <div class="card" style="padding:18px">
+            <h2>Core scope</h2>
+            <p>Staged deployment so capital is never exposed ahead of proof.</p>
+
+            <table class="table" aria-label="Core scope table">
+              <thead>
+                <tr>
+                  <th>Component</th>
+                  <th>Deliverable</th>
+                  <th>Proof artifact</th>
+                </tr>
+              </thead>
+              <tbody>
+                <tr>
+                  <td>Land + build</td>
+                  <td>Initial build-out in phases</td>
+                  <td>Photos, receipts, contractor logs</td>
+                </tr>
+                <tr>
+                  <td>Goats</td>
+                  <td>Herd + production ramp</td>
+                  <td>Weekly KPIs (yield/cost/health)</td>
+                </tr>
+                <tr>
+                  <td>Sales</td>
+                  <td>Hybrid revenue: bulk → value-add</td>
+                  <td>Invoices, volumes, pricing history</td>
+                </tr>
+                <tr>
+                  <td>Reporting</td>
+                  <td>Monthly performance snapshots</td>
+                  <td>Investor update cadence + archive</td>
+                </tr>
+              </tbody>
+            </table>
+
+            <div class="hr"></div>
+
+            <h2>Risk controls</h2>
+            <p>We control downside by forcing gates and keeping a tight reporting loop.</p>
+            <div class="grid">
+              <div class="col-6 feature">
+                <h3>Milestone gating</h3>
+                <p>Next spend only unlocks when proof is complete and verified.</p>
+              </div>
+              <div class="col-6 feature">
+                <h3>Capex discipline</h3>
+                <p>Staged purchases; no “big bang” exposure.</p>
+              </div>
+              <div class="col-6 feature">
+                <h3>Operational KPIs</h3>
+                <p>Yield, mortality/health, feed cost, labor cost — tracked weekly.</p>
+              </div>
+              <div class="col-6 feature">
+                <h3>Reporting cadence</h3>
+                <p>Monthly updates; ad hoc alerts only when something breaks.</p>
+              </div>
+            </div>
+
+            <div class="hero-actions" style="margin-top:14px">
+              <a class="btn btn-primary" href="/timeline.html">See milestones</a>
+              <a class="btn" href="/token.html">Token layer</a>
+              <a class="btn btn-ghost" href="/faq.html">FAQ</a>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-5">
+          <div class="card" style="padding:18px">
+            <h2>What investors care about</h2>
+            <p>These are the only questions that matter.</p>
+            <div class="grid">
+              <div class="col-12 feature">
+                <h3>Unit economics</h3>
+                <p>What does 1 additional goat (or 1 additional unit of build-out) produce, net?</p>
+              </div>
+              <div class="col-12 feature">
+                <h3>Time to cash-flow</h3>
+                <p>How long until revenue stabilizes, and what are the leading indicators?</p>
+              </div>
+              <div class="col-12 feature">
+                <h3>Distribution logic</h3>
+                <p>What gets reinvested vs distributed, and under what rules?</p>
+              </div>
+              <div class="col-12 notice">
+                Want the full pack (numbers, assumptions, risk disclosures)?
+                <div style="margin-top:12px">
+                  <a class="btn btn-primary" href="/contact.html">Request investor pack</a>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="card" style="padding:18px;margin-top:16px">
+            <h2>Fast links</h2>
+            <div class="pill-row">
+              <a class="pill" href="/token.html"><strong>Token:</strong> mechanics</a>
+              <a class="pill" href="/timeline.html"><strong>Timeline:</strong> milestones</a>
+              <a class="pill" href="/contact.html"><strong>Contact:</strong> pack</a>
+              <a class="pill" href="/privacy.html"><strong>Privacy</strong></a>
+            </div>
+          </div>
+        </div>
+
+      </div>
+    </div>
+  </main>
+
+  <footer class="footer">
+    <div class="container footer-grid">
+      <div class="small">
+        <strong>LiquidRai</strong><br/>
+        Execution-first Chiang Rai project. Start with <a href="/timeline.html">Timeline</a> for progress checkpoints.
+      </div>
+      <div class="small">
+        <div><a href="/index.html">Home</a></div>
+        <div><a href="/project.html">Project</a></div>
+        <div><a href="/token.html">Token</a></div>
+        <div><a href="/faq.html">FAQ</a></div>
+      </div>
+      <div class="small">
+        <div><a href="/contact.html">Contact</a></div>
+        <div><a href="/privacy.html">Privacy</a></div>
+      </div>
+    </div>
+  </footer>
+
+  <script src="/assets/js/main.js"></script>
+</body>
+</html>
