--- a/timeline.html
+++ b/timeline.html
@@ -1,16 +1,134 @@
-<!doctype html><html lang="en"><head>
-<meta charset="utf-8"><meta name="viewport" content="width=device-width,initial-scale=1">
-<title>Development Timeline | LiquidRai</title>
-<meta name="description" content="Milestones from land acquisition to operational scaling.">
-<link rel="canonical" href="https://kalinwolf.github.io/timeline.html">
-<meta property="og:title" content="Development Timeline">
-<meta property="og:description" content="Milestones from land acquisition to operational scaling.">
-<meta property="og:type" content="article">
-<meta property="og:url" content="https://kalinwolf.github.io/timeline.html">
-<link rel="stylesheet" href="assets/css/styles.css">
-</head><body>
-<nav class="container"><div><strong>LiquidRai</strong></div><div><a href="/">Home</a><a href="project.html">Project</a><a href="realestate.html">Real Estate</a><a href="goats.html">Goat Farm</a><a href="token.html">Token</a><a href="timeline.html">Timeline</a><a href="faq.html">FAQ</a><a href="contact.html">Contact</a></div></nav>
-<section class="section container"><h1>Development Timeline</h1><p style="color:var(--muted)">Milestones from land acquisition to operational scaling.</p></section>
-<footer><div class="container"><div>© <span id="y"></span> LiquidRai</div><div style="margin-top:10px"><a href="project.html">Project</a><a href="realestate.html">Real Estate</a><a href="goats.html">Goat Farm</a><a href="token.html">Token</a><a href="timeline.html">Timeline</a><a href="faq.html">FAQ</a><a href="contact.html">Contact</a><a href="privacy.html">Privacy</a></div></div><script>document.getElementById("y").textContent=new Date().getFullYear()</script></footer>
-<script src="assets/js/main.js"></script>
-</body></html>
+<!doctype html>
+<html lang="en">
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Timeline — LiquidRai Milestones</title>
+  <meta name="description" content="Milestone-based execution plan for the LiquidRai Chiang Rai project. Clear checkpoints for build, operations, and reporting." />
+  <meta name="robots" content="index,follow" />
+  <link rel="icon" href="/assets/img/favicon.svg" type="image/svg+xml">
+  <link rel="canonical" href="https://kalinwolf.github.io/timeline.html" />
+  <meta property="og:title" content="LiquidRai Timeline" />
+  <meta property="og:description" content="Milestones, gates, and verification checkpoints." />
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://kalinwolf.github.io/timeline.html" />
+  <meta property="og:image" content="https://kalinwolf.github.io/assets/img/hero-illustration.svg" />
+  <meta name="twitter:card" content="summary_large_image" />
+  <link rel="stylesheet" href="/assets/css/styles.css" />
+</head>
+<body>
+  <div class="nav">
+    <div class="container nav-inner">
+      <a class="brand" href="/index.html">
+        <div class="brand-badge"></div>
+        <div>
+          <div class="brand-title">LiquidRai</div>
+          <div class="brand-sub">Milestones • Gates • Proof</div>
+        </div>
+      </a>
+      <div class="nav-links">
+        <a href="/project.html">Project</a>
+        <a href="/token.html">Token</a>
+        <a href="/timeline.html">Timeline</a>
+        <a href="/faq.html">FAQ</a>
+        <a href="/contact.html">Contact</a>
+      </div>
+      <div class="nav-cta">
+        <a class="btn btn-ghost" href="/project.html">Project scope</a>
+        <a class="btn btn-primary" href="/contact.html">Request pack</a>
+      </div>
+    </div>
+  </div>
+
+  <header class="hero">
+    <div class="container">
+      <div class="kicker">Timeline</div>
+      <h1 class="h1">Milestones that force reality.</h1>
+      <p class="lead">Each phase has a gate. Gates require proof artifacts. Proof unlocks the next stage.</p>
+    </div>
+  </header>
+
+  <main class="section">
+    <div class="container">
+      <div class="card" style="padding:18px">
+        <h2>Execution phases</h2>
+        <p>Example structure (final plan can be adjusted without changing the gate logic).</p>
+
+        <table class="table" aria-label="Milestones table">
+          <thead>
+            <tr>
+              <th>Phase</th>
+              <th>Goal</th>
+              <th>Gate condition</th>
+              <th>Proof artifacts</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <td><strong>Phase 1</strong></td>
+              <td>Land + initial build</td>
+              <td>Build readiness + contractors lined up</td>
+              <td>Receipts, contracts, photo logs</td>
+            </tr>
+            <tr>
+              <td><strong>Phase 2</strong></td>
+              <td>Herd + production ramp</td>
+              <td>Health protocols + feed supply stable</td>
+              <td>Vet logs, KPI dashboard, costs</td>
+            </tr>
+            <tr>
+              <td><strong>Phase 3</strong></td>
+              <td>Sales + distribution rhythm</td>
+              <td>Revenue stability + margin thresholds</td>
+              <td>Invoices, volumes, monthly reports</td>
+            </tr>
+            <tr>
+              <td><strong>Phase 4</strong></td>
+              <td>Expansion</td>
+              <td>Capex only after proof of ROI</td>
+              <td>ROI analysis + updated KPIs</td>
+            </tr>
+          </tbody>
+        </table>
+
+        <div class="hr"></div>
+
+        <div class="grid">
+          <div class="col-6 feature">
+            <h3>Reporting cadence</h3>
+            <p>Monthly snapshots: revenue, costs, KPIs, and an execution log.</p>
+          </div>
+          <div class="col-6 feature">
+            <h3>Alerting</h3>
+            <p>Ad hoc alerts only when something breaks or materially changes.</p>
+          </div>
+        </div>
+
+        <div class="hero-actions" style="margin-top:14px">
+          <a class="btn btn-primary" href="/project.html">Project scope</a>
+          <a class="btn" href="/faq.html">FAQ</a>
+          <a class="btn btn-ghost" href="/contact.html">Contact</a>
+        </div>
+      </div>
+    </div>
+  </main>
+
+  <footer class="footer">
+    <div class="container footer-grid">
+      <div class="small"><strong>LiquidRai</strong><br/>Milestones exist to reduce risk and force proof.</div>
+      <div class="small">
+        <div><a href="/index.html">Home</a></div>
+        <div><a href="/project.html">Project</a></div>
+        <div><a href="/token.html">Token</a></div>
+      </div>
+      <div class="small">
+        <div><a href="/faq.html">FAQ</a></div>
+        <div><a href="/contact.html">Contact</a></div>
+        <div><a href="/privacy.html">Privacy</a></div>
+      </div>
+    </div>
+  </footer>
+
+  <script src="/assets/js/main.js"></script>
+</body>
+</html>
