--- a/token.html
+++ b/token.html
@@ -1,16 +1,170 @@
-<!doctype html><html lang="en"><head>
-<meta charset="utf-8"><meta name="viewport" content="width=device-width,initial-scale=1">
-<title>Token Participation | LiquidRai</title>
-<meta name="description" content="Digital participation layer for ecosystem access and updates.">
-<link rel="canonical" href="https://kalinwolf.github.io/token.html">
-<meta property="og:title" content="Token Participation">
-<meta property="og:description" content="Digital participation layer for ecosystem access and updates.">
-<meta property="og:type" content="article">
-<meta property="og:url" content="https://kalinwolf.github.io/token.html">
-<link rel="stylesheet" href="assets/css/styles.css">
-</head><body>
-<nav class="container"><div><strong>LiquidRai</strong></div><div><a href="/">Home</a><a href="project.html">Project</a><a href="realestate.html">Real Estate</a><a href="goats.html">Goat Farm</a><a href="token.html">Token</a><a href="timeline.html">Timeline</a><a href="faq.html">FAQ</a><a href="contact.html">Contact</a></div></nav>
-<section class="section container"><h1>Token Participation</h1><p style="color:var(--muted)">Digital participation layer for ecosystem access and updates.</p></section>
-<footer><div class="container"><div>© <span id="y"></span> LiquidRai</div><div style="margin-top:10px"><a href="project.html">Project</a><a href="realestate.html">Real Estate</a><a href="goats.html">Goat Farm</a><a href="token.html">Token</a><a href="timeline.html">Timeline</a><a href="faq.html">FAQ</a><a href="contact.html">Contact</a><a href="privacy.html">Privacy</a></div></div><script>document.getElementById("y").textContent=new Date().getFullYear()</script></footer>
-<script src="assets/js/main.js"></script>
-</body></html>
+<!doctype html>
+<html lang="en">
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Token Mechanics — LiquidRai Profit Participation</title>
+  <meta name="description" content="Token mechanics overview: participation logic, reporting discipline, distribution rules, and risk disclosures for the Chiang Rai project." />
+  <meta name="robots" content="index,follow" />
+  <link rel="icon" href="/assets/img/favicon.svg" type="image/svg+xml">
+  <link rel="canonical" href="https://kalinwolf.github.io/token.html" />
+  <meta property="og:title" content="LiquidRai Token Mechanics" />
+  <meta property="og:description" content="A practical token layer: profit participation + reporting discipline. Not hype." />
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://kalinwolf.github.io/token.html" />
+  <meta property="og:image" content="https://kalinwolf.github.io/assets/img/hero-illustration.svg" />
+  <meta name="twitter:card" content="summary_large_image" />
+  <link rel="stylesheet" href="/assets/css/styles.css" />
+  <script type="application/ld+json">
+  {
+    "@context":"https://schema.org",
+    "@type":"WebPage",
+    "name":"Token Mechanics",
+    "url":"https://kalinwolf.github.io/token.html",
+    "description":"Token profit participation layer and reporting logic for the LiquidRai Chiang Rai project."
+  }
+  </script>
+</head>
+<body>
+  <div class="nav">
+    <div class="container nav-inner">
+      <a class="brand" href="/index.html">
+        <div class="brand-badge"></div>
+        <div>
+          <div class="brand-title">LiquidRai</div>
+          <div class="brand-sub">Token layer • Reporting • Distributions</div>
+        </div>
+      </a>
+      <div class="nav-links">
+        <a href="/project.html">Project</a>
+        <a href="/token.html">Token</a>
+        <a href="/timeline.html">Timeline</a>
+        <a href="/faq.html">FAQ</a>
+        <a href="/contact.html">Contact</a>
+      </div>
+      <div class="nav-cta">
+        <a class="btn btn-ghost" href="/project.html">Project scope</a>
+        <a class="btn btn-primary" href="/contact.html">Request pack</a>
+      </div>
+    </div>
+  </div>
+
+  <header class="hero">
+    <div class="container">
+      <div class="kicker">Token mechanics</div>
+      <h1 class="h1">A token layer that behaves like accounting, not marketing.</h1>
+      <p class="lead">If tokens exist at all, they exist to improve reporting and distribution integrity — not to replace the underlying operation.</p>
+    </div>
+  </header>
+
+  <main class="section">
+    <div class="container">
+      <div class="grid">
+        <div class="col-7">
+          <div class="card" style="padding:18px">
+            <h2>Design principles</h2>
+            <div class="grid">
+              <div class="col-6 feature">
+                <h3>Proof-first</h3>
+                <p>No “valuation talk” without operational proof and audited basics.</p>
+              </div>
+              <div class="col-6 feature">
+                <h3>Distribution rules</h3>
+                <p>Clear logic for reinvestment vs distributions, tied to milestones.</p>
+              </div>
+              <div class="col-6 feature">
+                <h3>Transparency</h3>
+                <p>Monthly reporting cadence and an archive of historical updates.</p>
+              </div>
+              <div class="col-6 feature">
+                <h3>Anti-hype</h3>
+                <p>Tokens do not “create yield.” Operations create yield.</p>
+              </div>
+            </div>
+
+            <div class="hr"></div>
+
+            <h2>High-level flow</h2>
+            <table class="table" aria-label="Token flow table">
+              <thead>
+                <tr><th>Step</th><th>What happens</th><th>What’s recorded</th></tr>
+              </thead>
+              <tbody>
+                <tr><td>1</td><td>Capital enters project</td><td>Allocation + milestone gate</td></tr>
+                <tr><td>2</td><td>Operation produces revenue</td><td>Invoices, volumes, costs</td></tr>
+                <tr><td>3</td><td>Net profit calculated</td><td>Monthly summary + proof</td></tr>
+                <tr><td>4</td><td>Distribution decision</td><td>Reinvest vs distribute rules</td></tr>
+              </tbody>
+            </table>
+
+            <div class="notice" style="margin-top:14px">
+              <strong>Disclosure:</strong> This page is informational. Any implementation must respect local regulations and compliance constraints.
+            </div>
+
+            <div class="hero-actions" style="margin-top:14px">
+              <a class="btn btn-primary" href="/contact.html">Request investor pack</a>
+              <a class="btn" href="/faq.html">Read FAQ</a>
+              <a class="btn btn-ghost" href="/timeline.html">Milestones</a>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-5">
+          <div class="card" style="padding:18px">
+            <h2>What you can ask for</h2>
+            <p>Serious due diligence starts here.</p>
+            <div class="grid">
+              <div class="col-12 feature">
+                <h3>Reporting samples</h3>
+                <p>Example monthly update format (KPIs, costs, receipts).</p>
+              </div>
+              <div class="col-12 feature">
+                <h3>Distribution policy draft</h3>
+                <p>How we decide reinvestment vs payout.</p>
+              </div>
+              <div class="col-12 feature">
+                <h3>Risk disclosure</h3>
+                <p>Known risks and mitigation plan.</p>
+              </div>
+              <div class="col-12 notice">
+                <div style="display:flex;justify-content:space-between;gap:10px;align-items:center">
+                  <span>Want the pack?</span>
+                  <a class="btn btn-primary" href="/contact.html">Request</a>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="card" style="padding:18px;margin-top:16px">
+            <h2>Copy quick links</h2>
+            <p>Useful for sending to people fast.</p>
+            <div class="hero-actions">
+              <button class="btn btn-ghost" data-copy="https://kalinwolf.github.io/token.html">Copy this page</button>
+              <button class="btn btn-ghost" data-copy="https://kalinwolf.github.io/project.html">Copy project</button>
+            </div>
+          </div>
+
+        </div>
+      </div>
+    </div>
+  </main>
+
+  <footer class="footer">
+    <div class="container footer-grid">
+      <div class="small"><strong>LiquidRai</strong><br/>Token mechanics are only meaningful if the underlying operation produces real profit.</div>
+      <div class="small">
+        <div><a href="/index.html">Home</a></div>
+        <div><a href="/project.html">Project</a></div>
+        <div><a href="/timeline.html">Timeline</a></div>
+      </div>
+      <div class="small">
+        <div><a href="/faq.html">FAQ</a></div>
+        <div><a href="/contact.html">Contact</a></div>
+        <div><a href="/privacy.html">Privacy</a></div>
+      </div>
+    </div>
+  </footer>
+
+  <script src="/assets/js/main.js"></script>
+</body>
+</html>
