--- a/404.html
+++ b/404.html
@@ -1,16 +1,42 @@
-<!doctype html><html lang="en"><head>
-<meta charset="utf-8"><meta name="viewport" content="width=device-width,initial-scale=1">
-<title>Page Not Found | LiquidRai</title>
-<meta name="description" content="The page you are looking for does not exist.">
-<link rel="canonical" href="https://kalinwolf.github.io/404.html">
-<meta property="og:title" content="Page Not Found">
-<meta property="og:description" content="The page you are looking for does not exist.">
-<meta property="og:type" content="article">
-<meta property="og:url" content="https://kalinwolf.github.io/404.html">
-<link rel="stylesheet" href="assets/css/styles.css">
-</head><body>
-<nav class="container"><div><strong>LiquidRai</strong></div><div><a href="/">Home</a><a href="project.html">Project</a><a href="realestate.html">Real Estate</a><a href="goats.html">Goat Farm</a><a href="token.html">Token</a><a href="timeline.html">Timeline</a><a href="faq.html">FAQ</a><a href="contact.html">Contact</a></div></nav>
-<section class="section container"><h1>Page Not Found</h1><p style="color:var(--muted)">The page you are looking for does not exist.</p></section>
-<footer><div class="container"><div>© <span id="y"></span> LiquidRai</div><div style="margin-top:10px"><a href="project.html">Project</a><a href="realestate.html">Real Estate</a><a href="goats.html">Goat Farm</a><a href="token.html">Token</a><a href="timeline.html">Timeline</a><a href="faq.html">FAQ</a><a href="contact.html">Contact</a><a href="privacy.html">Privacy</a></div></div><script>document.getElementById("y").textContent=new Date().getFullYear()</script></footer>
-<script src="assets/js/main.js"></script>
-</body></html>
+<!doctype html>
+<html lang="en">
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Not Found — LiquidRai</title>
+  <meta name="robots" content="noindex" />
+  <link rel="icon" href="/assets/img/favicon.svg" type="image/svg+xml">
+  <link rel="stylesheet" href="/assets/css/styles.css" />
+</head>
+<body>
+  <div class="nav">
+    <div class="container nav-inner">
+      <a class="brand" href="/index.html">
+        <div class="brand-badge"></div>
+        <div>
+          <div class="brand-title">LiquidRai</div>
+          <div class="brand-sub">404</div>
+        </div>
+      </a>
+      <div class="nav-cta">
+        <a class="btn btn-primary" href="/index.html">Home</a>
+      </div>
+    </div>
+  </div>
+
+  <header class="hero">
+    <div class="container">
+      <div class="kicker">404</div>
+      <h1 class="h1">Page not found.</h1>
+      <p class="lead">Use the navigation or go back home.</p>
+      <div class="hero-actions">
+        <a class="btn btn-primary" href="/index.html">Home</a>
+        <a class="btn btn-ghost" href="/project.html">Project</a>
+        <a class="btn btn-ghost" href="/contact.html">Contact</a>
+      </div>
+    </div>
+  </header>
+
+  <script src="/assets/js/main.js"></script>
+</body>
+</html>
