--- a/index.html
+++ b/index.html
@@ -1,29 +1,268 @@
-<!doctype html><html lang="en"><head>
-<meta charset="utf-8"><meta name="viewport" content="width=device-width,initial-scale=1">
-<title>LiquidRai | Real Assets for the Next Generation</title>
-<meta name="description" content="LiquidRai combines Chiang Rai land, goat farm operations, and token participation into one accessible real asset ecosystem.">
-<link rel="canonical" href="https://kalinwolf.github.io/">
-<meta property="og:title" content="LiquidRai">
-<meta property="og:description" content="Real land. Real operations. Token participation.">
-<meta property="og:type" content="website">
-<meta property="og:url" content="https://kalinwolf.github.io/">
-<meta name="twitter:card" content="summary_large_image">
-<link rel="stylesheet" href="assets/css/styles.css">
-<script type="application/ld+json">{"@context":"https://schema.org","@type":"Organization","name":"LiquidRai","url":"https://kalinwolf.github.io/"}</script>
-</head><body>
-<nav class="container"><div><strong>LiquidRai</strong></div><div><a href="/">Home</a><a href="project.html">Project</a><a href="realestate.html">Real Estate</a><a href="goats.html">Goat Farm</a><a href="token.html">Token</a><a href="timeline.html">Timeline</a><a href="faq.html">FAQ</a><a href="contact.html">Contact</a></div></nav>
-<section class="hero container">
-<h1>Own a Piece of Real-World Assets</h1>
-<p style="color:var(--muted);max-width:700px;margin:0 auto 30px">LiquidRai connects token holders to transparent land and farm development in Chiang Rai.</p>
-<a class="btn" href="token.html">Buy Token</a>
-</section>
-<section class="section container">
-<div class="grid grid-3">
-<div class="card"><h3>Real Estate</h3><p>Strategic land development in Chiang Rai.</p></div>
-<div class="card"><h3>Goat Farm</h3><p>Production-driven dairy and livestock model.</p></div>
-<div class="card"><h3>Token</h3><p>Digital access layer for participation and updates.</p></div>
-</div>
-</section>
-<footer><div class="container"><div>© <span id="y"></span> LiquidRai</div><div style="margin-top:10px"><a href="project.html">Project</a><a href="realestate.html">Real Estate</a><a href="goats.html">Goat Farm</a><a href="token.html">Token</a><a href="timeline.html">Timeline</a><a href="faq.html">FAQ</a><a href="contact.html">Contact</a><a href="privacy.html">Privacy</a></div></div><script>document.getElementById("y").textContent=new Date().getFullYear()</script></footer>
-<script src="assets/js/main.js"></script>
-</body></html>
+<!doctype html>
+<html lang="en">
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>LiquidRai — Chiang Rai Real Estate + Token + Goat Farm Project</title>
+  <meta name="description" content="A structured Chiang Rai project combining real estate, a goat dairy/meat operation, and tokenized profit participation. Full execution, measurable milestones, investor reporting." />
+  <meta name="robots" content="index,follow" />
+  <link rel="icon" href="/assets/img/favicon.svg" type="image/svg+xml">
+  <link rel="manifest" href="/manifest.webmanifest">
+  <link rel="canonical" href="https://kalinwolf.github.io/" />
+
+  <meta property="og:title" content="LiquidRai — Chiang Rai Project" />
+  <meta property="og:description" content="Real asset cash-flow projects built with disciplined execution. Explore the Chiang Rai plan: land + build, goats, and token mechanics." />
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://kalinwolf.github.io/" />
+  <meta property="og:image" content="https://kalinwolf.github.io/assets/img/hero-illustration.svg" />
+  <meta name="twitter:card" content="summary_large_image" />
+
+  <link rel="stylesheet" href="/assets/css/styles.css" />
+  <script type="application/ld+json">
+  {
+    "@context":"https://schema.org",
+    "@type":"Organization",
+    "name":"LiquidRai",
+    "url":"https://kalinwolf.github.io/",
+    "description":"Structured Chiang Rai real asset project: real estate, goat farm operations, tokenized profit participation.",
+    "sameAs":[]
+  }
+  </script>
+</head>
+
+<body>
+  <div class="nav">
+    <div class="container nav-inner">
+      <a class="brand" href="/index.html" aria-label="LiquidRai Home">
+        <div class="brand-badge"></div>
+        <div>
+          <div class="brand-title">LiquidRai</div>
+          <div class="brand-sub">Chiang Rai • Real assets • Disciplined execution</div>
+        </div>
+      </a>
+
+      <div class="nav-links">
+        <a href="/project.html">Project</a>
+        <a href="/token.html">Token</a>
+        <a href="/timeline.html">Timeline</a>
+        <a href="/faq.html">FAQ</a>
+        <a href="/contact.html">Contact</a>
+      </div>
+
+      <div class="nav-cta">
+        <a class="btn btn-ghost" href="/token.html">Request Investor Pack</a>
+        <a class="btn btn-primary" href="/contact.html">Talk to me</a>
+      </div>
+    </div>
+  </div>
+
+  <header class="hero">
+    <div class="container hero-grid">
+      <div>
+        <div class="kicker">Real assets • Cash-flow mechanics • Measurable milestones</div>
+        <h1 class="h1">Chiang Rai real-estate + goat farm — structured for repeatable yield.</h1>
+        <p class="lead">
+          This is a real operation with a hard build plan: land + build-out, production ramp, and transparent reporting.
+          Tokens are an optional profit-participation layer (not hype).
+        </p>
+
+        <div class="hero-actions">
+          <a class="btn btn-primary" href="/project.html">Explore the project</a>
+          <a class="btn" href="/timeline.html">See milestones</a>
+          <button class="btn btn-ghost" data-copy="https://kalinwolf.github.io/">Copy site link <span class="kbd">⌘C</span></button>
+        </div>
+
+        <div class="pill-row">
+          <div class="pill"><strong>Phase 1:</strong> Land + initial build</div>
+          <div class="pill"><strong>Phase 2:</strong> Herd + milk/meat ramp</div>
+          <div class="pill"><strong>Phase 3:</strong> Distribution + expansion</div>
+        </div>
+      </div>
+
+      <div class="card hero-card">
+        <div class="split">
+          <div class="badge"><span class="badge-dot dot-good"></span>Execution-first (not a “whitepaper”) </div>
+          <div class="badge"><span class="badge-dot dot-accent"></span>Investor reporting discipline</div>
+        </div>
+        <div style="margin-top:14px">
+          <img src="/assets/img/hero-illustration.svg" alt="LiquidRai illustration" style="width:100%;border-radius:18px;border:1px solid rgba(31,42,85,.75)" />
+        </div>
+        <div class="split" style="margin-top:14px">
+          <div class="badge"><span class="badge-dot dot-warn"></span>Clear risk controls</div>
+          <a class="btn btn-primary" href="/token.html">Token mechanics</a>
+        </div>
+      </div>
+    </div>
+  </header>
+
+  <main>
+    <section class="section">
+      <div class="container">
+        <div class="grid">
+          <div class="col-7">
+            <h2>What you’re looking at</h2>
+            <p>
+              A Chiang Rai asset stack designed to produce predictable cash flow:
+              real estate leverage (land + build) + agricultural production (goats) + optional tokenized participation for reporting and distribution.
+            </p>
+
+            <div class="grid">
+              <div class="col-6 feature">
+                <div class="icon">
+                  <svg viewBox="0 0 24 24" fill="none"><path d="M4 11l8-7 8 7v9a2 2 0 0 1-2 2H6a2 2 0 0 1-2-2v-9Z" stroke="currentColor" stroke-width="2"/><path d="M9 22v-8h6v8" stroke="currentColor" stroke-width="2"/></svg>
+                </div>
+                <h3>Real estate build plan</h3>
+                <p>Land + staged build-out with clear checkpoints. Documentation-driven progress, not vibes.</p>
+              </div>
+
+              <div class="col-6 feature">
+                <div class="icon">
+                  <svg viewBox="0 0 24 24" fill="none"><path d="M4 19c2-6 4-10 8-10s6 4 8 10" stroke="currentColor" stroke-width="2" stroke-linecap="round"/><path d="M7 9c0-3 2-5 5-5s5 2 5 5" stroke="currentColor" stroke-width="2"/></svg>
+                </div>
+                <h3>Goat dairy + meat ramp</h3>
+                <p>Herd growth compounds output. Hybrid sales: bulk milk early, bottled + value-add later.</p>
+              </div>
+
+              <div class="col-6 feature">
+                <div class="icon">
+                  <svg viewBox="0 0 24 24" fill="none"><path d="M4 12h16" stroke="currentColor" stroke-width="2" stroke-linecap="round"/><path d="M12 4v16" stroke="currentColor" stroke-width="2" stroke-linecap="round"/></svg>
+                </div>
+                <h3>Token layer (optional)</h3>
+                <p>Profit participation + reporting discipline. Designed to align incentives and track distributions.</p>
+              </div>
+
+              <div class="col-6 feature">
+                <div class="icon">
+                  <svg viewBox="0 0 24 24" fill="none"><path d="M12 22s8-4 8-10V7l-8-4-8 4v5c0 6 8 10 8 10Z" stroke="currentColor" stroke-width="2"/><path d="M9 12l2 2 4-4" stroke="currentColor" stroke-width="2" stroke-linecap="round"/></svg>
+                </div>
+                <h3>Risk controls</h3>
+                <p>Milestone gating, capped burn, operating logs, and measurable KPIs across build + production.</p>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-5">
+            <div class="card" style="padding:18px">
+              <h2 style="margin:0 0 8px">Quick navigation</h2>
+              <p>Use these to validate details fast.</p>
+              <div class="grid">
+                <div class="col-12 feature">
+                  <h3 style="margin:0 0 8px">Pages</h3>
+                  <div class="pill-row">
+                    <a class="pill" href="/project.html">Project details</a>
+                    <a class="pill" href="/token.html">Token mechanics</a>
+                    <a class="pill" href="/timeline.html">Milestones</a>
+                    <a class="pill" href="/faq.html">FAQ</a>
+                    <a class="pill" href="/contact.html">Contact</a>
+                    <a class="pill" href="/privacy.html">Privacy</a>
+                  </div>
+                </div>
+
+                <div class="col-12 feature">
+                  <h3 style="margin:0 0 8px">Investor pack</h3>
+                  <p style="margin:0 0 10px">Request the pack and we’ll share scope, numbers, and risk disclosures.</p>
+                  <a class="btn btn-primary" href="/contact.html">Request pack</a>
+                </div>
+
+                <div class="col-12 notice">
+                  <strong>Note:</strong> This website is informational. Any token references are structure discussions — not a solicitation.
+                </div>
+              </div>
+            </div>
+          </div>
+
+        </div>
+      </div>
+    </section>
+
+    <section class="section">
+      <div class="container">
+        <div class="grid">
+          <div class="col-12 card" style="padding:18px">
+            <div class="split">
+              <div>
+                <h2 style="margin:0 0 6px">What’s different about this</h2>
+                <p style="margin:0">Less talking. More proof. More timestamps. More execution.</p>
+              </div>
+              <div class="badge"><span class="badge-dot dot-good"></span>Updated: <span class="kbd">v2</span></div>
+            </div>
+
+            <div class="hr"></div>
+
+            <table class="table" aria-label="High-level operating model">
+              <thead>
+                <tr>
+                  <th>Area</th>
+                  <th>Approach</th>
+                  <th>What you can verify</th>
+                </tr>
+              </thead>
+              <tbody>
+                <tr>
+                  <td>Build</td>
+                  <td>Milestone-gated, staged spend</td>
+                  <td>Timeline + photo logs + receipts</td>
+                </tr>
+                <tr>
+                  <td>Ops</td>
+                  <td>Measured production ramp</td>
+                  <td>Weekly KPIs (yield, costs, headcount)</td>
+                </tr>
+                <tr>
+                  <td>Reporting</td>
+                  <td>Investor updates on schedule</td>
+                  <td>Monthly summary + distributions (if any)</td>
+                </tr>
+              </tbody>
+            </table>
+
+            <div class="hero-actions" style="margin-top:14px">
+              <a class="btn btn-primary" href="/project.html">See full project</a>
+              <a class="btn" href="/faq.html">Read FAQ</a>
+              <a class="btn btn-ghost" href="/timeline.html">Check milestones</a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+  </main>
+
+  <div id="toast" class="toast" role="status" aria-live="polite">
+    <span id="toastMsg"></span>
+    <button id="toastBtn" class="btn btn-ghost" style="padding:8px 10px">Close</button>
+  </div>
+
+  <footer class="footer">
+    <div class="container footer-grid">
+      <div>
+        <div class="brand" style="margin-bottom:10px">
+          <div class="brand-badge"></div>
+          <div>
+            <div class="brand-title">LiquidRai</div>
+            <div class="brand-sub">Chiang Rai • Real assets • Disciplined execution</div>
+          </div>
+        </div>
+        <div class="small">
+          Built for clarity: structure, milestones, and proof.
+          If you want to evaluate this seriously, start with <a href="/project.html">Project</a> and <a href="/timeline.html">Timeline</a>.
+        </div>
+      </div>
+      <div>
+        <div class="small" style="font-weight:900;color:var(--txt);margin-bottom:8px">Explore</div>
+        <div class="small"><a href="/project.html">Project</a></div>
+        <div class="small"><a href="/token.html">Token</a></div>
+        <div class="small"><a href="/timeline.html">Timeline</a></div>
+        <div class="small"><a href="/faq.html">FAQ</a></div>
+      </div>
+      <div>
+        <div class="small" style="font-weight:900;color:var(--txt);margin-bottom:8px">Contact</div>
+        <div class="small"><a href="/contact.html">Request investor pack</a></div>
+        <div class="small"><a href="/privacy.html">Privacy</a></div>
+        <div class="small"><span class="kbd">SEO</span> sitemap + OG + schema enabled</div>
+      </div>
+    </div>
+  </footer>
+
+  <script src="/assets/js/main.js"></script>
+</body>
+</html>
